<resources>
    <string name="app_name">praktika 9 prilozhenie</string>
    <string name="primer1_text">1 + 3 = 2</string>
    <string name="primer2_text">1 + 1 = 2</string>
    <string name="primer3_text">2 * 4 = 2</string>
    <string name="button11_text">Да</string>
    <string name="button12_text">Нет</string>
    <string name="button21_text">Да</string>
    <string name="button22_text">Нет</string>
    <string name="button31_text">Да</string>
    <string name="button32_text">Нет</string>
    <string name="toast1_text">Верный ответ!</string>
    <string name="toast2_text">Неверный ответ!</string>


</resources>